[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
openai = "<2"
python = ">=3.8.1,<4.0"
langchain = "^0.1"
tiktoken = ">=0.5.2"
chromadb = ">=0.4.14"
gpt4all = ">=1.0.8"
beautifulsoup4 = ">=4.12.2"
langchain-openai = "^0.0.5"
langchainhub = "^0.1"
arxiv = "^2.0.0"
pydantic = "<2"
selenium = 4.18.1
langchain-experimental = 0.0.52
pygithub = 2.2.0
html2text = 2024.2.26
pgvector = 0.2.5

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"
fastapi = "^0.104.0"
sse-starlette = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
